[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hs58-openai"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "openai>=1.12.0",
    "httpx>=0.26.0",
    "web3>=6.0.0",
    "eth-account>=0.10.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
hs58-openai = "src.index:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
